styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
body,
.calc-container,
.calc-body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 0;
    margin: 0;
    font-family: Roboto, sans-serif;
}
.header {
    height: 70px;
    width: auto;
    background: darkred;
}
.calc-container {
    flex: 1;
    height: 800px;
    align-items: center;
    padding: 20px;
}
.calc-body {
    align-self: center;
    background: black;
    width: 320px;
    height: 600px;
    border-radius: 8px;
    justify-content: space-between;
}
.screen {
    display: flex;
    flex: 1;    
    justify-content: flex-end;
    align-items: flex-end;
    padding: 5px;
    margin: 10px;
    font-size: 50px;
    color: white;
    max-width: 300px;
}
.buttons {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-end;
    gap: 1px;
    padding: 5px;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 76px;
    height: 76px;
    color: white;
    background: rgb(23, 23, 23);
    font-
}
.operator {
    background: darkslategray;
}
#equals {
    background: teal;
    width: 153px;
}

